syntax = "proto3";
package assets.transactions.burn;
import "ids/base/identity_id.proto";
import "ids/base/asset_id.proto";

message Message{
  string from = 1;
  ids.base.IdentityID from_i_d = 2;
  ids.base.AssetID asset_i_d = 3;
}